--- a/wcag21.html
+++ b/wcag21.html
@@ -449,8 +449,20 @@ details.respec-tests-details > li {
 		text-decoration: line-through;
 	}
 
-</style>
+.permalink {
+  width: 100%; /* just to rearrange the permalink */
+  height: 1px;
+  overflow: visible;
+  font-size: 10pt;
+  font-style: normal;
+  vertical-align: middle;
+  margin-left: 4px;
+  float: right;
+}
 
+</style>
+<!-- end of JF block. To delete after the translation finished -->
+	
 <body class="h-entry toc-sidebar">
 	<p id="toc-nav"><a id="toc-jump" href="#toc"><span aria-hidden="true">↑</span> <span>Jump to Table of Contents</span></a><a id="toc-toggle" href="#toc"><span aria-hidden="true">←</span> <span>Collapse Sidebar</span></a></p>
 
