--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -506,7 +506,7 @@
 
 	<p>Para comentar, <a href="https://github.com/w3c/wcag/issues/new">submeta uma questão no repositório WCAG do GitHub do <abbr xml:lang="en" lang="en" title="World Wide Web Consortium">W3C</abbr></a>. O <em xml:lang="en" lang="en">Working Group</em> solicita que os comentários públicos sejam preenchidos como novas questões, um assunto em cada comentário distinto. A criação de contas GitHub para submissão de questões é gratuita. Se a submissão de questões via GitHub não for praticável, envie email para <a href="mailto:public-agwg-comments@w3.org?subject=WCAG%202.1%20public%20comment">public-agwg-comments@w3.org</a> (<a href="https://lists.w3.org/Archives/Public/public-agwg-comments/">arquivo de comentários</a>). Os comentários recebidos sobre a Recomendação WCAG 2.1 não podem resultar em alterações na presente versão das diretrizes, mas podem ser endereçadas na errata ou em futuras versões das WCAG. O <em xml:lang="en" lang="en">Working Group</em> não planeia efetuar respostas formais aos comentários. Existe publicamente disponível uma lista de <a href="https://github.com/w3c/wcag/issues/">questões submetidas</a> bem como <a href="http://lists.w3.org/Archives/Public/w3c-wai-gl/">Arquivos da lista de discussão <abbr title="Accessibility Guidelines Working Group" xml:lang="en" lang="en">AG WG</abbr></a>, e o trabalho futuro levado a efeito pelo <em xml:lang="en" lang="en">Working Group</em> poderá vir a endereçar os comentários recebidos neste documento.</p>
 
-	<p>O presente documento foi publicado pelo <a href="https://www.w3.org/WAI/GL/" xml:lang="en" lang="en">Accessibility Guidelines Working Group</a> como uma Recomendação.</p>
+	<p>Este documento foi publicado pelo <a href="https://www.w3.org/WAI/GL/" xml:lang="en" lang="en">Accessibility Guidelines Working Group</a> como uma Recomendação.</p>
 
 	<p>Consulte, por favor, o <a href="https://www.w3.org/WAI/WCAG21/implementation-report/">relatório de implementação</a> do <em xml:lang="en" lang="en">Working Group</em>.</p>
 
@@ -588,7 +588,7 @@
 				</li>
 			</ol>
 		</li>
-		<li class="tocline"><a href="#operable" class="tocxref"><span class="secno">2. </span>Operable </a>
+		<li class="tocline"><a href="#operable" class="tocxref"><span class="secno">2. </span>Operável</a>
 			<ol class="toc">
 				<li class="tocline"><a href="#keyboard-accessible" class="tocxref"><span class="secno">2.1 </span>Keyboard Accessible</a>
 					<ol class="toc">
@@ -598,7 +598,7 @@
 						<li class="tocline"><a href="#character-key-shortcuts" class="tocxref"><span class="secno">2.1.4 </span>Character Key Shortcuts</a></li>
 					</ol>
 				</li>
-				<li class="tocline"><a href="#enough-time" class="tocxref"><span class="secno">2.2 Enough Time</a>
+				<li class="tocline"><a href="#enough-time" class="tocxref"><span class="secno">2.2 </span>Enough Time</a>
 					<ol class="toc">
 						<li class="tocline"><a href="#timing-adjustable" class="tocxref"><span class="secno">2.2.1 </span>Timing Adjustable</a></li>
 						<li class="tocline"><a href="#pause-stop-hide" class="tocxref"><span class="secno">2.2.2 </span>Pause, Hide</a></li>
@@ -641,7 +641,7 @@
 				</li>
 			</ol>
 		</li>
-		<li class="tocline"><a href="#understandable" class="tocxref"><span class="secno">3. </span>Understandable</a>
+		<li class="tocline"><a href="#understandable" class="tocxref"><span class="secno">3. </span>Compreensível</a>
 			<ol class="toc"><li class="tocline"><a href="#readable" class="tocxref"><span class="secno">3.1 </span>Readable</span></a>
 				<ol class="toc">
 					<li class="tocline"><a href="#language-of-page" class="tocxref"><span class="secno">3.1.1 </span>Language of Page</a></li>
@@ -673,9 +673,9 @@
 			</li>
 		</ol>
 	</li>
-	<li class="tocline"><a href="#robust" class="tocxref"><span class="secno">4. </span>Robust</a>
+	<li class="tocline"><a href="#robust" class="tocxref"><span class="secno">4. </span>Robusto</a>
 		<ol class="toc">
-			<li class="tocline"><a href="#compatible" class="tocxref"><span class="secno">4.1 </span>Compatible</a>
+			<li class="tocline"><a href="#compatible" class="tocxref"><span class="secno">4.1 </span>Compatível</a>
 				<ol class="toc">
 					<li class="tocline"><a href="#parsing" class="tocxref"><span class="secno">4.1.1 </span>Parsing</a></li>
 					<li class="tocline"><a href="#name-role-value" class="tocxref"><span class="secno">4.1.2 </span>Name, Role, Value</li>
@@ -687,7 +687,7 @@
 	<li class="tocline"><a href="#conformance" class="tocxref"><span class="secno">5. </span>Conformance</a>
 		<ol class="toc">
 			<li class="tocline"><a href="#interpreting-normative-requirements" class="tocxref"><span class="secno">5.1 </span>Interpreting Normative Requirements</a></li>
-			<li class="tocline"><a href="#conformance-reqs" class="tocxref"><span class="secno"><+>5.2</span> </span>Conformance Requirements</a>
+			<li class="tocline"><a href="#conformance-reqs" class="tocxref"><span class="secno">5.2 </span>Conformance Requirements</a>
 					<ol class="toc">
 						<li class="tocline"><a href="#cc1" class="tocxref"><span class="secno">5.2.1 </span>Conformance Level</a></li>
 						<li class="tocline"><a href="#cc2" class="tocxref"><span class="secno">5.2.2 </span>Full pages</a></li>
@@ -715,10 +715,10 @@
 				<li class="tocline"><a href="#enabling-funders" class="tocxref"><span class="secno">A.3 </span>Enabling funders</a></li>
 			</ol>
 		</li>
-		<li class="tocline"><a href="#references" class="tocxref"><span class="secno">B. </span>References</a>
+		<li class="tocline"><a href="#references" class="tocxref"><span class="secno">B. </span>Referências</a>
 			<ol class="toc">
-				<li class="tocline"><a href="#normative-references" class="tocxref"><span class="secno">B.1 </span>Normative references</a></li>
-				<li class="tocline"><a href="#informative-references" class="tocxref"><span class="secno">B.2 </span>Informative references</a></li>
+				<li class="tocline"><a href="#normative-references" class="tocxref"><span class="secno">B.1 </span>Referências normativas</a></li>
+				<li class="tocline"><a href="#informative-references" class="tocxref"><span class="secno">B.2 </span>Referências informativas</a></li>
 			</ol>
 		</li>
 	</ol>
@@ -730,7 +730,7 @@
 			<p><em>Esta secção é não normativa.</em></p>
 			<section id="background-on-wcag-2">
 				<h3 id="x0-1-background-on-wcag-2"><span class="secno">0.1 </span>Enquadramento sobre as WCAG 2 <span class="permalink"><a href="#background-on-wcag-2" aria-label="Permalink para o 0.1 Enquadramento sobre as WCAG 2" title="Permalink para o 0.1 Enquadramento sobre as WCAG 2"><span>§</span></a></span></h3>
-				
+
 				<p>Web Content Accessibility Guidelines (WCAG) <span class="rcl-da">2.1</span><span class="rcl-dd">2.0 </span> defines how to make Web content more accessible to people with disabilities. Accessibility involves a wide range of disabilities, including visual, auditory, physical, speech, cognitive, language, learning, and neurological disabilities. Although these guidelines cover a wide range of issues, they are not able to address the needs of people with all types, degrees, and combinations of disability. These guidelines also make Web content more usable by older individuals with changing abilities due to aging and often improve usability for users in general.</p>
 				<p>WCAG <span class="rcl-da">2.1</span><span class="rcl-dd">2.0 </span> is developed through the <a href="https://www.w3.org/WAI/standards-guidelines/w3c-process/"><abbr title="World Wide Web Consortium">W3C</abbr> process</a> in cooperation with individuals and organizations around the world, with a goal of providing a shared standard for Web content accessibility that meets the needs of individuals, organizations, and governments internationally. WCAG <span class="rcl-da">2.1</span><span class="rcl-dd">2.0 </span> builds on WCAG <span class="rcl-da">2.0</span><span class="rcl-dd">1.0 </span> [<cite><a class="bibref" href="#bib-WCAG20">WCAG<span class="rcl-da">20</span><span class="rcl-dd">10</span><span class="rcl-dd">] </span></a></cite><span class="rcl-da">],</span> <span class="rcl-da">which</span> <span class="rcl-da">in</span> <span class="rcl-da">turn</span> <span class="rcl-da">built</span> <span class="rcl-da">on</span> <span class="rcl-da">WCAG</span> <span class="rcl-da">1.0</span> <span class="rcl-da">[</span><cite><a class="bibref" href="#bib-WAI-WEBCONTENT"><span class="rcl-da">WAI-WEBCONTENT</span></a></cite><span class="rcl-da">]</span> and is designed to apply broadly to different Web technologies now and in the future, and to be testable with a combination of automated testing and human evaluation. For an introduction to WCAG, see the <a href="http://www.w3.org/WAI/standards-guidelines/wcag/">Web Content Accessibility Guidelines (WCAG) Overview</a>.</p>
                 
