--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -581,9 +581,9 @@
 						<li class="tocline"><a href="#visual-presentation" class="tocxref"><span class="secno">1.4.8 </span>Formatação Visual </a></li>
 						<li class="tocline"><a href="#images-of-text-no-exception" class="tocxref"><span class="secno">1.4.9 </span>Imagens de Texto (sem Excepção)</a></li>
 						<li class="tocline"><a href="#reflow" class="tocxref"><span class="secno">1.4.10 </span>Realinhar</a></li>
-						<li class="tocline"><a href="#non-text-contrast" class="tocxref"><span class="secno">1.4.11 </span>Contraste de elementos não textuais</a></li>
+						<li class="tocline"><a href="#non-text-contrast" class="tocxref"><span class="secno">1.4.11 </span>Contraste não textual</a></li>
 						<li class="tocline"><a href="#text-spacing" class="tocxref"><span class="secno">1.4.12 </span>Espaçamento de Texto</a></li>
-						<li class="tocline"><a href="#content-on-hover-or-focus" class="tocxref"><span class="secno">1.4.13 </span>Conteúdo do Hover ou Foco</a></li>
+						<li class="tocline"><a href="#content-on-hover-or-focus" class="tocxref"><span class="secno">1.4.13 </span>Conteúdo do <em xml:lang="en" lang="en">on Hover</em> ou Foco</a></li>
 					</ol>
 				</li>
 			</ol>
@@ -679,7 +679,7 @@
 				<ol class="toc">
 					<li class="tocline"><a href="#parsing" class="tocxref"><span class="secno">4.1.1 </span>Análise Sintática</a></li>
 					<li class="tocline"><a href="#name-role-value" class="tocxref"><span class="secno">4.1.2 </span>Nome, Papel, Valor</li>
-					<li class="tocline"><a href="#status-messages" class="tocxref"><span class="secno">4.1.3 </span>Status Messages</a></li>
+					<li class="tocline"><a href="#status-messages" class="tocxref"><span class="secno">4.1.3 </span>Mensagens de <em>Status</em></a></li>
 				</ol>
 			</li>
 		</ol>
@@ -814,7 +814,7 @@
 						<li>1.4.10 <a href="#reflow">Realinhar</a> (AA)</li>
 						<li>1.4.11 <a href="#non-text-contrast">Contraste não textual</a> (AA)</li>
 						<li>1.4.12 <a href="#text-spacing">Espaçamento de Texto</a> (AA)</li>
-						<li>1.4.13 <a href="#content-on-hover-or-focus">Conteúdo do on Hover ou Foco</a> (AA)</li>
+						<li>1.4.13 <a href="#content-on-hover-or-focus">Conteúdo do <em xml:lang="en" lang="en">on Hover</em> ou Foco</a> (AA)</li>
 						<li>2.1.4 <a href="#character-key-shortcuts">Teclas de atalho Caráter</a> (A)</li>
 						<li>2.2.6 <a href="#timeouts">Tempos limite</a> (AAA)</li>
 						<li>2.3.3 <a href="#animation-from-interactions">Animação das Interações</a> (AAA)</li>
