--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -684,30 +684,30 @@
 			</li>
 		</ol>
 	</li>
-	<li class="tocline"><a href="#conformance" class="tocxref"><span class="secno">5. </span>Conformance</a>
+	<li class="tocline"><a href="#conformance" class="tocxref"><span class="secno">5. </span>Conformidade</a>
 		<ol class="toc">
-			<li class="tocline"><a href="#interpreting-normative-requirements" class="tocxref"><span class="secno">5.1 </span>Interpreting Normative Requirements</a></li>
-			<li class="tocline"><a href="#conformance-reqs" class="tocxref"><span class="secno">5.2 </span>Conformance Requirements</a>
+			<li class="tocline"><a href="#interpreting-normative-requirements" class="tocxref"><span class="secno">5.1 </span>Interpretação dos Requisitos Normativos</a></li>
+			<li class="tocline"><a href="#conformance-reqs" class="tocxref"><span class="secno">5.2 </span>Requisitos de Conformidade</a>
 					<ol class="toc">
-						<li class="tocline"><a href="#cc1" class="tocxref"><span class="secno">5.2.1 </span>Conformance Level</a></li>
-						<li class="tocline"><a href="#cc2" class="tocxref"><span class="secno">5.2.2 </span>Full pages</a></li>
-						<li class="tocline"><a href="#cc3" class="tocxref"><span class="secno">5.2.3 </span>Complete processes</a></li>
-						<li class="tocline"><a href="#cc4" class="tocxref"><span class="secno">5.2.4 </span>Only Accessibility-Supported Ways of Using Technologies</a></li>
-						<li class="tocline"><a href="#cc5" class="tocxref"><span class="secno">5.2.5 </span>Non-Interference</span></a></li>
+						<li class="tocline"><a href="#cc1" class="tocxref"><span class="secno">5.2.1 </span>Nível de conformidade</a></li>
+						<li class="tocline"><a href="#cc2" class="tocxref"><span class="secno">5.2.2 </span>Páginas completas</a></li>
+						<li class="tocline"><a href="#cc3" class="tocxref"><span class="secno">5.2.3 </span>Processos completos</a></li>
+						<li class="tocline"><a href="#cc4" class="tocxref"><span class="secno">5.2.4 </span>Apenas Formas de Utilização das Tecnologias com "suporte à acessibilidade"</a></li>
+						<li class="tocline"><a href="#cc5" class="tocxref"><span class="secno">5.2.5 </span>Não Interferência</span></a></li>
 					</ol>
 				</li>
 				<li class="tocline"><a href="#conformance-claims" class="tocxref"><span class="secno">5.3 </span>Reivindicações de Conformidade (Opcional)</a>
 					<ol class="toc">
-						<li class="tocline"><a href="#conformance-required" class="tocxref"><span class="secno">5.3.1 </span>Componentes Obrigatórios de uma Reivindicação de Conformidade</a></li>
+						<li class="tocline"><a href="#conformance-required" class="tocxref"><span class="secno">5.3.1 </span>Componentes Obrigatórias de uma Reivindicação de Conformidade</a></li>
 						<li class="tocline"><a href="#conformance-optional" class="tocxref"><span class="secno">5.3.2 </span>Componentes Opcionais de uma Reivindicação de Conformidade</a></li>
 					</ol>
 				</li>
-				<li class="tocline"><a href="#conformance-partial" class="tocxref"><span class="secno">5.4 </span>Statement of Partial Conformance - Third Party Content</a></li>
-				<li class="tocline"><a href="#conformance-partial-lang" class="tocxref"><span class="secno">5.5 </span>Statement of Partial Conformance - Language</a></li>
+				<li class="tocline"><a href="#conformance-partial" class="tocxref"><span class="secno">5.4 </span>Declaração de Conformidade Parcial - Conteúdo de Terceiros</a></li>
+				<li class="tocline"><a href="#conformance-partial-lang" class="tocxref"><span class="secno">5.5 </span>Declaração de Conformidade Parcial - Idioma</a></li>
 			</ol>
 		</li>
 		<li class="tocline"><a href="#glossary" class="tocxref"><span class="secno">6. </span>Glossário</a></li>
-		<li class="tocline"><a href="#input-purposes" class="tocxref"><span class="secno">7. </span>Input Purposes for User Interface Components</a></li>
+		<li class="tocline"><a href="#input-purposes" class="tocxref"><span class="secno">7. </span>Propósitos de Entrada para as Componentes da Interface de Utilizador</a></li>
 		<li class="tocline"><a href="#acknowledgments" class="tocxref"><span class="secno">A. </span>Agradecimentos</a>
 			<ol class="toc">
 				<li class="tocline"><a href="#ack_participants-active" class="tocxref"><span class="secno">A.1 </span>Participants of the AG WG active in the development of this document:</a></li>
@@ -2421,7 +2421,7 @@
                 </section>
 
                 <section id="cc4">
-                    <h4 id="x5-2-4-only-accessibility-supported-ways-of-using-technologies"><span class="secno">5.2.4 </span>Apenas Formas "suporte à acessibilidade" de Utilização das Tecnologias<span class="permalink"><a href="#cc4" aria-label="Permalink para o 5.2.4 Apenas Formas suporte à acessibilidade de Utilização das Tecnologias" title="Permalink para o 5.2.4 Apenas Formas suporte à acessibilidade de Utilização das Tecnologias"><span>§</span></a></span></h4>
+                    <h4 id="x5-2-4-only-accessibility-supported-ways-of-using-technologies"><span class="secno">5.2.4 </span>Apenas Formas de Utilização das Tecnologias com "suporte à acessibilidade"<span class="permalink"><a href="#cc4" aria-label="Permalink para o 5.2.4 Apenas Formas de Utilização das Tecnologias com suporte à acessibilidade title="Permalink para o 5.2.4 Apenas Formas de Utilização das Tecnologias com suporte à acessibilidade"><span>§</span></a></span></h4>
 
                     <p>Apenas formas <a href="#dfn-accessibility-supported" class="internalDFN" data-link-type="dfn">suporte à acessibilidade</a> de utilização das  <a href="#dfn-technologies" class="internalDFN" data-link-type="dfn">tecnologias</a> são <a href="#dfn-relied-upon" class="internalDFN" data-link-type="dfn">fiáveis</a> para satisfazer os critérios de sucesso. Qualquer informação ou funcionalidade disponibilizada numa forma não "suporte à acessibilidade" está também disponível numa forma que é "suporte à acessibilidade". (Consulte <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/conformance">Compreendendo "suporte à acessibilidade"</a>.)</p>
                 </section>
@@ -2454,7 +2454,7 @@
                 <p>A conformidade está definida apenas para <a href="#dfn-web-page-s" class="internalDFN" data-link-type="dfn">páginas Web</a>. No entanto, pode ser feita uma reivindicação de conformidade para uma página, uma série de páginas ou múltiplas páginas Web relacionadas.</p>
 
                 <section id="conformance-required">
-                    <h4 id="x5-3-1-required-components-of-a-conformance-claim"><span class="secno">5.3.1 </span>Componentes Obrigatórios de uma Reivindicação de Conformidade<span class="permalink"><a href="#conformance-required" aria-label="Permalink para o 5.3.1 Componentes Obrigatórias de uma Reivindicação de Conformidade" title="Permalink para o 5.3.1 Componentes Obrigatórias de uma Reivindicação de Conformidade"><span>§</span></a></span></h4>
+                    <h4 id="x5-3-1-required-components-of-a-conformance-claim"><span class="secno">5.3.1 </span>Componentes Obrigatórias de uma Reivindicação de Conformidade<span class="permalink"><a href="#conformance-required" aria-label="Permalink para o 5.3.1 Componentes Obrigatórias de uma Reivindicação de Conformidade" title="Permalink para o 5.3.1 Componentes Obrigatórias de uma Reivindicação de Conformidade"><span>§</span></a></span></h4>
 
                     <p>As reivindicações de conformidade <strong>não são obrigatórias</strong>. Os autores podem desenvolver em conformidade com as WCAG 2.1 sem fazerem uma reivindicação disso. No entanto, se fizerem uma reivindicação de conformidade, então a reivindicação de conformidade <strong>tem</strong> de incluir a informação seguinte:</p>
                     <ol>
@@ -2517,7 +2517,8 @@
 
         </section>
         <section id="glossary">
-            <!--OddPage--><h2 id="x6-glossary"><span class="secno"><span class="rcl-da">6</span><span class="rcl-da">.</span> </span><span class="rcl-dd">Appendix </span><span class="rcl-dd">A</span><span class="rcl-dd">: </span>Glossary<span class="permalink"><span class="rcl-dd">This </span><span class="rcl-dd">section </span><span class="rcl-dd">is </span><a href="#glossary" aria-label="Permalink for 6. Glossary" title="Permalink for 6. Glossary"><span class="rcl-dd">normative </span><span><span class="rcl-da">§</span><span class="rcl-dd">. </span></span></a></span></h2>
+            <!--OddPage--><h2 id="x6-glossary"><span class="secno">6. </span>Glossário<span class="permalink"><a href="#glossary" aria-label="Permalink para o 6. Glossário" title="Permalink para o 6. Glossário"><span>§</span></a></span></h2>
+
             <dl id="terms">
 
                 <dt><dfn data-lt="abbreviations|abbreviation" data-dfn-type="dfn" id="dfn-abbreviations">abbreviation</dfn></dt>
