--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -859,7 +859,7 @@
             <section class="guideline" id="text-alternatives">
                 <h3 id="x1-1-text-alternatives"><span class="secno">Diretriz 1.1 </span>Alternativas em Texto<span class="permalink"><a href="#text-alternatives" aria-label="Permalink para o 1.1 Alternativas em Texto" title="Permalink para o 1.1 Alternativas em Texto"><span>§</span></a></span></h3>
 
-                <p>Fornecer alternativas em texto para todo o conteúdo não textual de modo a que o mesmo possa ser apresentado de outras formas, de acordo com as necessidades dos utilizadores, como por exemplo: caracteres ampliados, braille, fala, símbolos ou linguagem mais simples.</p>
+                <p>Forneça alternativas em texto para qualquer conteúdo não textual, de forma a que o mesmo possa ser apresentado de outras maneiras, de acordo com as necessidades dos utilizadores, como por exemplo: caracteres ampliados, braille, fala, símbolos ou linguagem mais simples.</p>                
 
                 <section class="sc" id="non-text-content">
    
@@ -898,9 +898,9 @@
 </section>
 </section>
 <section class="guideline" id="time-based-media">
-	<h3 id="x1-2-time-based-media"><span class="secno">Diretriz 1.2 </span>Media Dinâmica<span class="permalink"><a href="#time-based-media" aria-label="Permalink para o 1.2 Media Dinâmica" title="Permalink para o 1.2 Media Dinâmica"><span>§</span></a></span></h3>
+	<h3 id="x1-2-time-based-media"><span class="secno">Diretriz 1.2 </span>Media Dinâmica ou Contínua<span class="permalink"><a href="#time-based-media" aria-label="Permalink para o 1.2 Media Dinâmica ou Contínua" title="Permalink para o 1.2 Media Dinâmica ou Contínua"><span>§</span></a></span></h3>
 
-	<p>Fornecer alternativas para media dinâmica.</p>
+	<p>Forneça alternativas para media dinâmica ou contínua.</p>
 
 	<section class="sc" id="audio-only-and-video-only-prerecorded">
 		<h4 id="x1-2-1-audio-only-and-video-only-prerecorded"><span class="secno">Critério de Sucesso 1.2.1</span>apenas Áudio e apenas Vídeo (pré-gravado)<span class="permalink"><a href="#audio-only-and-video-only-prerecorded" aria-label="Permalink para o 1.2.1 apenas Áudio e apenas Vídeo (pré-gravado)" title="Permalink para o 1.2.1 apenas Áudio e apenas Vídeo (pré-gravado)"><span>§</span></a></span></h4>
@@ -989,7 +989,7 @@
 <section class="guideline" id="adaptable">
 	<h3 id="x1-3-adaptable"><span class="secno">Diretriz 1.3 </span>Adaptável<span class="permalink"><a href="#adaptable" aria-label="Permalink para o 1.3 Adaptável" title="Permalink para o 1.3 Adaptável"><span>§</span></a></span></h3>
 
-	<p>Criar conteúdo que pode ser apresentado de diferentes modos (por exemplo um <em xml:lang="en" lang="en">layout</em> mais simples) sem perda de informação ou estrutura.</p>
+	<p>Crie conteúdo que pode ser apresentado de diferentes modos (por exemplo um <em xml:lang="en" lang="en">layout</em> mais simples) sem perda de informação ou estrutura.</p>
 
 	<section class="sc" id="info-and-relationships">
 
@@ -1405,7 +1405,7 @@
 
 		<h3 id="x2-1-keyboard-accessible"><span class="secno">Diretriz 2.1 </span>Acessível por Teclado<span class="permalink"><a href="#keyboard-accessible" aria-label="Permalink para o 2.1 Acessível por Teclado" title="Permalink para o 2.1 Acessível por Teclado"><span>§</span></a></span></h3>
 
-		<p><span class="rcl-da">Make</span> <span class="rcl-da">all</span> <span class="rcl-da">functionality</span> <span class="rcl-da">available</span> <span class="rcl-da">from</span> A <span class="rcl-da">keyboard</span><span class="rcl-da">.</span></p>
+		<p>Torne todas as funcionalidades disponíveis a partir do teclado.</p>
 
 		<section class="sc" id="keyboard">
 
