--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -710,9 +710,9 @@
 		<li class="tocline"><a href="#input-purposes" class="tocxref"><span class="secno">7. </span>Propósitos de Entrada para as Componentes da Interface de Utilizador</a></li>
 		<li class="tocline"><a href="#acknowledgments" class="tocxref"><span class="secno">A. </span>Agradecimentos</a>
 			<ol class="toc">
-				<li class="tocline"><a href="#ack_participants-active" class="tocxref"><span class="secno">A.1 </span>Participants of the AG WG active in the development of this document:</a></li>
-				<li class="tocline"><a href="#ack_participants-previous" class="tocxref"><span class="secno">A.2 </span>Other previously active WCAG WG participants and other contributors to WCAG 2.0, WCAG 2.1, or supporting resources</a></li>
-				<li class="tocline"><a href="#enabling-funders" class="tocxref"><span class="secno">A.3 </span>Enabling funders</a></li>
+				<li class="tocline"><a href="#ack_participants-active" class="tocxref"><span class="secno">A.1 </span>Participantes do <abbr title="Accessibility Guidelines Working Group" xml:lang="en" lang="en">AG WG</abbr> ativos no desenvolvimento do presente documento</a></li>
+				<li class="tocline"><a href="#ack_participants-previous" class="tocxref"><span class="secno">A.2 </span>Outros participantes anteriormente ativos no <abbr title="Working Group" xml:lang="en" lang="en">WG</abbr> WCAG e outros colaboradores para as WCAG 2.0, as WCAG 2.1, ou os recursos de apoio</a></li>
+				<li class="tocline"><a href="#enabling-funders" class="tocxref"><span class="secno">A.3 </span>Co-financiadores</a></li>
 			</ol>
 		</li>
 		<li class="tocline"><a href="#references" class="tocxref"><span class="secno">B. </span>Referências</a>
@@ -2904,21 +2904,21 @@
     <p>Para informação adicional sobre a participação no <em lang="en" xml:lang="en">Accessibility Guidelines Working Group (AG WG)</em> consulte a <a href="https://www.w3.org/WAI/GL/">página de entrada do <em xml:lang="en" lang="en">Working Group</em></a>.</p>
 
     <section id="ack_participants-active">
-        <h3 id="a-1-participants-of-the-ag-wg-active-in-the-development-of-this-document"><span class="secno">A.1 </span>Participantes do AG WG ativos no desenvolvimento do presente documento:<span class="permalink"><a href="#ack_participants-active" aria-label="Permalink for A.1 Participantes do AG WG ativos no desenvolvimento do presente documento:" title="Permalink for A.1 Participantes do AG WG ativos no desenvolvimento do presente documento:"><span>§</span></a></span></h3>
+        <h3 id="a-1-participants-of-the-ag-wg-active-in-the-development-of-this-document"><span class="secno">A.1 </span>Participantes do <abbr title="Accessibility Guidelines Working Group" xml:lang="en" lang="en">AG WG</abbr> ativos no desenvolvimento do presente documento:<span class="permalink"><a href="#ack_participants-active" aria-label="Permalink for A.1 Participantes do AG WG ativos no desenvolvimento do presente documento:" title="Permalink for A.1 Participantes do AG WG ativos no desenvolvimento do presente documento:"><span>§</span></a></span></h3>
         <ul xml:lang="en" lang="en">
             <li>Jake Abma (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
             <li>Shadi Abou-Zahra (<abbr title="World Wide Web Consortium">W3C</abbr>)</li>
-          <li>Chuck Adams (Oracle Corporation)</li>
-          <li>Amani Ali (Nomensa)</li>
+          	<li>Chuck Adams (Oracle Corporation)</li>
+          	<li>Amani Ali (Nomensa)</li>
             <li>Jim Allan (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
             <li>Paul Adam (Deque Systems, Inc.)</li>
-          <li>Christopher Auclair (VitalSource | Ingram Content Group)</li>
+          	<li>Christopher Auclair (VitalSource | Ingram Content Group)</li>
             <li>Jon Avila (Level Access)</li>
             <li>Tom Babinszki (IBM Corporation)</li>
             <li>Bruce Bailey (U.S. Access Board)</li>
             <li>Renaldo Bernard (University of Southampton)</li>
-          <li>Chris Blouch (Level Access)</li>
-          <li>Denis Boudreau (Deque Systems, Inc.)</li>
+          	<li>Chris Blouch (Level Access)</li>
+          	<li>Denis Boudreau (Deque Systems, Inc.)</li>
             <li>Judy Brewer (<abbr title="World Wide Web Consortium">W3C</abbr>)</li>
             <li>Shari Butler (Pearson plc)</li>
             <li>Thaddeus Cambron (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
@@ -2968,7 +2968,7 @@
             <li>Adam Lund (Thomson Reuters)</li>
             <li>David MacDonald (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
             <li>Erich Manser (IBM Corporation)</li>
-          <li>Kurt Mattes (Deque Systems, Inc.)</li>
+          	<li>Kurt Mattes (Deque Systems, Inc.)</li>
             <li>Scott McCormack (Level Access)</li>
             <li>Chris McMeeking (Deque Systems, Inc.)</li>
             <li>Jan McSorley (Pearson plc)</li>
@@ -2981,7 +2981,7 @@
             <li>Sailesh Panchang (Deque Systems, Inc.)</li>
             <li>Charu Pandhi (IBM Corporation)</li>
             <li>Kim Patch (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
-          <li>Melanie Philipp (Deque Systems, Inc.)</li>
+          	<li>Melanie Philipp (Deque Systems, Inc.)</li>
             <li>Mike Pluke (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
             <li>Ian Pouncey (The Paciello Group, LLC)</li>
             <li>Ruoxi Ran (<abbr title="World Wide Web Consortium">W3C</abbr>)</li>
@@ -2989,7 +2989,7 @@
             <li>Jan Richards (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
             <li>John Rochford (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
             <li>Marla Runyan (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
-          <li>Stefan Schnabel (SAP SE)</li>
+          	<li>Stefan Schnabel (SAP SE)</li>
             <li>Ayelet Seeman (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
             <li>Lisa Seeman-Kestenbaum (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
             <li>Glenda Sims (Deque Systems, Inc.)</li>
@@ -3001,19 +3001,19 @@
             <li>Jaeil Song (National Information Society Agency (NIA))</li>
             <li>Jeanne Spellman (The Paciello Group, LLC)</li>
             <li>Makoto Ueki (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
-          <li>Jatin Vaishnav (Deque Systems, Inc.)</li>
+          	<li>Jatin Vaishnav (Deque Systems, Inc.)</li>
             <li>Gregg Vanderheiden (Raising the Floor)</li>
             <li>Evangelos Vlachogiannis (Fraunhofer Gesellschaft)</li>
             <li>Kathleen Wahlbin (<em xml:lang="pt" lang="pt">perito convidado</em>)</li>
             <li>Can Wang (Zhejiang University)</li>
             <li>Léonie Watson (The Paciello Group, LLC)</li>
             <li>Jason White (Educational Testing Service)</li>
-          <li>Mark Wilcock (Unify Software and Solutions)</li>
+          	<li>Mark Wilcock (Unify Software and Solutions)</li>
         </ul>
     </section>
 
     <section id="ack_participants-previous">
-        <h3 id="a-2-other-previously-active-wcag-wg-participants-and-other-contributors-to-wcag-2-0-wcag-2-1-or-supporting-resources"><span class="secno">A.2 </span>Outros participantes anteriormente ativos no WG WCAG e outros colaboradores para as WCAG 2.0, as WCAG 2.1, ou os recursos de apoio <span class="permalink"><a href="#ack_participants-previous" aria-label="Permalink for A.2 Outros participantes anteriormente ativos no WG WCAG e outros colaboradores para as WCAG 2.0, as WCAG 2.1, ou os recursos de apoio" title="Permalink for A.2 Outros participantes anteriormente ativos no WG WCAG e outros colaboradores para as WCAG 2.0, as WCAG 2.1, ou os recursos de apoio"><span>§</span></a></span></h3>
+        <h3 id="a-2-other-previously-active-wcag-wg-participants-and-other-contributors-to-wcag-2-0-wcag-2-1-or-supporting-resources"><span class="secno">A.2 </span>Outros participantes anteriormente ativos no <abbr title="Working Group" xml:lang="en" lang="en">WG</abbr> WCAG e outros colaboradores para as WCAG 2.0, as WCAG 2.1, ou os recursos de apoio <span class="permalink"><a href="#ack_participants-previous" aria-label="Permalink for A.2 Outros participantes anteriormente ativos no WG WCAG e outros colaboradores para as WCAG 2.0, as WCAG 2.1, ou os recursos de apoio" title="Permalink for A.2 Outros participantes anteriormente ativos no WG WCAG e outros colaboradores para as WCAG 2.0, as WCAG 2.1, ou os recursos de apoio"><span>§</span></a></span></h3>
 
         <p>Paul Adam, Jenae Andershonis, Wilhelm Joys Andersen, Andrew Arch, Avi Arditti, Aries Arditi, Mark Barratt, Mike Barta, Sandy Bartell, Kynn Bartlett, Chris Beer, Charles Belov, Marco Bertoni, Harvey Bingham, Chris Blouch, Paul Bohman, Frederick Boland, Denis Boudreau, Patrice Bourlon, Andy Brown, Dick Brown, Doyle Burnett, Raven Calais, Ben Caldwell, Tomas Caspers, Roberto Castaldo, Sofia Celic-Li, Sambhavi Chandrashekar, Mike Cherim, Jonathan Chetwynd, Wendy Chisholm, Alan Chuter, David M Clark, Joe Clark, Darcy Clarke, James Coltham, Earl Cousins, James Craig, Tom Croucher, Pierce Crowell, Nir Dagan, Daniel Dardailler, Geoff Deering, Sébastien Delorme, Pete DeVasto, Iyad Abu Doush, Sylvie Duchateau, Cherie Eckholm, Roberto Ellero, Don Evans, Gavin Evans, Neal Ewers, Steve Faulkner, Bengt Farre, Lainey Feingold, Wilco Fiers, Michel Fitos, Alan J. Flavell, Nikolaos Floratos, Kentarou Fukuda, Miguel Garcia, P.J. Gardner, Alistair Garrison, Greg Gay, Becky Gibson, Al Gilman, Kerstin Goldsmith, Michael Grade, Karl Groves, Loretta Guarino Reid, Jon Gunderson, Emmanuelle Gutiérrez y Restrepo, Brian Hardy, Eric Hansen, Benjamin Hawkes-Lewis, Sean Hayes, Shawn Henry, Hans Hillen, Donovan Hipke, Bjoern Hoehrmann, Allen Hoffman, Chris Hofstader, Yvette Hoitink, Martijn Houtepen, Carlos Iglesias, Richard Ishida, Jonas Jacek, Ian Jacobs, Phill Jenkins, Barry Johnson, Duff Johnson, Jyotsna Kaki, Shilpi Kapoor, Leonard R. Kasday, Kazuhito Kidachi, Ken Kipness, Johannes Koch, Marja-Riitta Koivunen, Preety Kumar, Kristjan Kure, Andrew LaHart, Gez Lemon, Chuck Letourneau, Aurélien Levy, Harry Loots, Scott Luebking, Tim Lacy, Jim Ley, Alex Li, William Loughborough, N Maffeo, Mark Magennis, Kapsi Maria, Luca Mascaro, Matt May, Sheena McCullagh, Liam McGee, Jens Oliver Meiert, Niqui Merret, Jonathan Metz, Alessandro Miele, Steven Miller, Mathew J Mirabella, Matt May, Marti McCuller, Sorcha Moore, Charles F. Munat, Robert Neff, Charles Nevile, Liddy Nevile, Dylan Nicholson, Bruno von Niman, Tim Noonan, Sebastiano Nutarelli, Graham Oliver, Sean B. Palmer, Devarshi Pant, Nigel Peck, Anne Pemberton, David Poehlman, Ian Pouncey, Charles Pritchard, Kerstin Probiesch, W Reagan, Adam Victor Reed, Chris Reeve, Chris Ridpath, Lee Roberts, Mark Rogers, Raph de Rooij, Gregory J. Rosmaita, Matthew Ross, Sharron Rush, Joel Sanda, Janina Sajka, Roberto Scano, Gordon Schantz, Tim van Schie, Wolf Schmidt, Stefan Schnabel, Cynthia Shelly, Glenda Sims, John Slatin, Becky Smith, Jared Smith, Andi Snow-Weaver, Neil Soiffer, Mike Squillace, Michael Stenitzer, Diane Stottlemyer, Christophe Strobbe, Sarah J Swierenga, Jim Thatcher, Terry Thompson, Justin Thorp, David Todd, Mary Utt, Jean Vanderdonckt, Carlos A Velasco, Eric Velleman, Gijs Veyfeyken, Dena Wainwright, Paul Walsch, Daman Wandke, Richard Warren, Elle Waters, Takayuki Watanabe, Gian Wild, David Wooley, Wu Wei, Kenny Zhang, Leona Zumbo.</p>
     </section>
