--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -542,17 +542,17 @@
 				</li>
 				<li class="tocline"><a href="#adaptable" class="tocxref"><span class="secno">1.3 </span>Adaptável</a>
 					<ol class="toc">
-						<li class="tocline"><a href="#info-and-relationships" class="tocxref"><span class="secno">1.3.1 </span>Info e Relações</a></li>
+						<li class="tocline"><a href="#info-and-relationships" class="tocxref"><span class="secno">1.3.1 </span>Info e Relacionamentos</a></li>
 						<li class="tocline"><a href="#meaningful-sequence" class="tocxref"><span class="secno">1.3.2 </span>Sequência Significante</a></li>
 						<li class="tocline"><a href="#sensory-characteristics" class="tocxref"><span class="secno">1.3.3 </span>Caraterísticas Sensoriais</a></li>
 						<li class="tocline"><a href="#orientation" class="tocxref"><span class="secno">1.3.4 </span>Orientação</a></li>
-						<li class="tocline"><a href="#identify-input-purpose" class="tocxref"><span class="secno">1.3.5 </span>Identificar Propósito da Entrada</a></li>
+						<li class="tocline"><a href="#identify-input-purpose" class="tocxref"><span class="secno">1.3.5 </span>Identificar Propósito de Entrada</a></li>
 						<li class="tocline"><a href="#identify-purpose" class="tocxref"><span class="secno">1.3.6 </span>Identificar Propósito</a></li>
 					</ol>
 				</li>
 				<li class="tocline"><a href="#distinguishable" class="tocxref"><span class="secno">1.4 </span>Distinguível</a>
 					<ol class="toc">
-						<li class="tocline"><a href="#use-of-color" class="tocxref"><span class="secno">1.4.1 </span>Utilização de Cor</a></li>
+						<li class="tocline"><a href="#use-of-color" class="tocxref"><span class="secno">1.4.1 </span>Utilização da Cor</a></li>
 						<li class="tocline"><a href="#audio-control" class="tocxref"><span class="secno">1.4.2 </span>Controlo de Áudio</a></li>
 						<li class="tocline"><a href="#contrast-minimum" class="tocxref"><span class="secno">1.4.3 </span>Contraste (Mínimo)</a></li>
 						<li class="tocline"><a href="#resize-text" class="tocxref"><span class="secno">1.4.4 </span>Redimensionar Texto</a></li>
@@ -790,7 +790,7 @@
 					<p>Os Critérios de Sucesso seguintes são novos nas WCAG 2.1:</p>
 					<ul>
 						<li>1.3.4 <a href="#orientation">Orientação</a> (AA)</li>
-						<li>1.3.5 <a href="#identify-input-purpose">Identificar Propósito da Entrada</a> (AA)</li>
+						<li>1.3.5 <a href="#identify-input-purpose">Identificar Propósito de Entrada</a> (AA)</li>
 						<li>1.3.6 <a href="#identify-purpose">Identificar Propósito</a> (AAA)</li>
 						<li>1.4.10 <a href="#reflow">Realinhar</a> (AA)</li>
 						<li>1.4.11 <a href="#non-text-contrast">Contraste não textual</a> (AA)</li>
@@ -959,7 +959,7 @@
 </section>
 
 <section class="sc" id="audio-only-live">   
-   <h4 id="x1-2-9-audio-only-live"><span class="secno">Critério de Sucesso 1.2.9 </span>Apenas áudio (em Direto)<span class="permalink"><a href="#audio-only-live" aria-label="Permalink para o 1.2.9 apenas Áudio (em Direto)" title="Permalink para o 1.2.9 apenas Áudio (em Direto)"><span>§</span></a></span></h4>
+   <h4 id="x1-2-9-audio-only-live"><span class="secno">Critério de Sucesso 1.2.9 </span>Apenas Áudio (em Direto)<span class="permalink"><a href="#audio-only-live" aria-label="Permalink para o 1.2.9 Apenas Áudio (em Direto)" title="Permalink para o 1.2.9 Apenas Áudio (em Direto)"><span>§</span></a></span></h4>
    
    <div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/audio-only-live.html">Compreendendo apenas Áudio (em Direto)</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#audio-only-live">Como satisfazer apenas Áudio (em Direto)</a></div><p class="conformance-level">(Nível AAA)</p>
    
@@ -993,7 +993,7 @@
 
 	<section class="sc" id="sensory-characteristics">
 
-		<h4 id="x1-3-3-sensory-characteristics"><span class="secno">Critério de Sucesso 1.3.3 </span>Características Sensoriais<span class="permalink"><a href="#sensory-characteristics" aria-label="Permalink para o 1.3.3 Características Sensoriais" title="Permalink para o 1.3.3 Características Sensoriais"> <span>§</span></a></span></h4>
+		<h4 id="x1-3-3-sensory-characteristics"><span class="secno">Critério de Sucesso 1.3.3 </span>Caraterísticas Sensoriais<span class="permalink"><a href="#sensory-characteristics" aria-label="Permalink para o 1.3.3 Caraterísticas Sensoriais" title="Permalink para o 1.3.3 Caraterísticas Sensoriais"> <span>§</span></a></span></h4>
 
 		<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/sensory-characteristics.html">Compreendendo Características Sensoriais</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#sensory-characteristics">Como satisfazer Características Sensoriais</a></div><p class="conformance-level">(Nível A)</p>
 
@@ -1041,6 +1041,7 @@
 
 	<p>Facilite a visão e a audição do conteúdo aos utilizadores incluindo a separação do plano principal do plano de fundo.</p>
 
+<section class="sc" id="use-of-color">
 	<h4 id="x1-4-1-use-of-color"><span class="secno">Critério de Sucesso 1.4.1 </span>Utilização da cor<span class="permalink"><a href="#use-of-color" aria-label="Permalink para o 1.4.1 Utilização da cor" title="Permalink para o 1.4.1 Utilização da cor"><span>§</span></a></span></h4>
 
 	<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/use-of-color.html">CompreendendoUtilização da cor</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#use-of-color">Como satisfazer Utilização da cor</a></div><p class="conformance-level">(Nível A)</p>
@@ -2161,9 +2162,9 @@
 		<dt><dfn data-lt="audio descriptions|audio description" data-dfn-type="dfn" id="dfn-audio-descriptions">áudiodescrição</dfn></dt>
 		<dd>
 			<p>narração adicionada à pista de áudio para descrever detalhes visuais importantes que não podem ser compreendidos a partir apenas da pista de áudio principal</p>
-			<div class="note" id="issue-container-generatedID-52"><div role="heading" class="note-title marker" id="h-note-52" aria-level="3"><span>Nota</span></div><p class="">A audiodescrição do <a href="#dfn-video" class="internalDFN" data-link-type="dfn">vídeo</a> disponibiliza informação sobre as ações, os personagens, as mudanças de cena, o texto no ecrã e outro conteúdo visual.</p></div>
-			<div class="note" id="issue-container-generatedID-53"><div role="heading" class="note-title marker" id="h-note-53" aria-level="3"><span>Nota</span></div><p class="">Na audiodescrição padrão, a narração é adicionada durante as pausas existentes entre os diálogos. (Consulte também <a href="#dfn-extended-audio-description" class="internalDFN" data-link-type="dfn">audiodescrição alargada</a>.)</p></div>
-			<div class="note" id="issue-container-generatedID-54"><div role="heading" class="note-title marker" id="h-note-54" aria-level="3"><span>Nota</span></div><p class="">Onde toda a informação <a href="#dfn-video" class="internalDFN" data-link-type="dfn">vídeo</a> já estiver disponível no <a href="#dfn-audio" class="internalDFN" data-link-type="dfn">áudio</a> existente, não é necessário audiodescrição adicional.</p></div>
+			<div class="note" id="issue-container-generatedID-52"><div role="heading" class="note-title marker" id="h-note-52" aria-level="3"><span>Nota</span></div><p class="">A áudiodescrição do <a href="#dfn-video" class="internalDFN" data-link-type="dfn">vídeo</a> disponibiliza informação sobre as ações, os personagens, as mudanças de cena, o texto no ecrã e outro conteúdo visual.</p></div>
+			<div class="note" id="issue-container-generatedID-53"><div role="heading" class="note-title marker" id="h-note-53" aria-level="3"><span>Nota</span></div><p class="">Na áudiodescrição padrão, a narração é adicionada durante as pausas existentes entre os diálogos. (Consulte também <a href="#dfn-extended-audio-description" class="internalDFN" data-link-type="dfn">áudiodescrição alargada</a>.)</p></div>
+			<div class="note" id="issue-container-generatedID-54"><div role="heading" class="note-title marker" id="h-note-54" aria-level="3"><span>Nota</span></div><p class="">Onde toda a informação <a href="#dfn-video" class="internalDFN" data-link-type="dfn">vídeo</a> já estiver disponível no <a href="#dfn-audio" class="internalDFN" data-link-type="dfn">áudio</a> existente, não é necessário áudiodescrição adicional.</p></div>
 			<div class="note" id="issue-container-generatedID-55"><div role="heading" class="note-title marker" id="h-note-55" aria-level="3"><span>Nota</span></div><p class="">Também chamado de "videodescrição" e de "narração descritiva."</p></div>
 		</dd>
 
@@ -2198,7 +2199,7 @@
 			<div class="note" id="issue-container-generatedID-61"><div role="heading" class="note-title marker" id="h-note-61" aria-level="3"><span>Nota</span></div><p class="">A legendagem aberta corresponde à legendagem que não pode ser desligada. Por exemplo, a legendagem é um equivalente visual de <a href="#dfn-images-of-text" class="internalDFN" data-link-type="dfn">imagens de texto</a> inseridas no <a href="#dfn-video" class="internalDFN" data-link-type="dfn">vídeo</a>.</p></div>
 			<div class="note" id="issue-container-generatedID-62"><div role="heading" class="note-title marker" id="h-note-62" aria-level="3"><span>Nota</span></div><p class="">A legendagem não deve obscurecer ou obstruir informação relevante no vídeo.</p></div>
 			<div class="note" id="issue-container-generatedID-63"><div role="heading" class="note-title marker" id="h-note-63" aria-level="3"><span>Nota</span></div><p class="">Em alguns países, a legendagem (captions) é designada de legendagem (subtitles).</p></div>
-			<div class="note" id="issue-container-generatedID-64"><div role="heading" class="note-title marker" id="h-note-64" aria-level="3"><span>Nota</span></div><p class="">A <a href="#dfn-audio-descriptions" class="internalDFN" data-link-type="dfn">audiodescrição</a> pode ser, mas não precisa de o ser, legendada uma vez que ela corresponde a descrições de informação que já está presente visualmente.</p></div>
+			<div class="note" id="issue-container-generatedID-64"><div role="heading" class="note-title marker" id="h-note-64" aria-level="3"><span>Nota</span></div><p class="">A <a href="#dfn-audio-descriptions" class="internalDFN" data-link-type="dfn">áudiodescrição</a> pode ser, mas não precisa de o ser, legendada uma vez que ela corresponde a descrições de informação que já está presente visualmente.</p></div>
 		</dd>
 
 		<dt><dfn data-lt="change of context|changes of context" data-dfn-type="dfn" id="dfn-change-of-context">alterações do contexto</dfn></dt>
